2007-11-13  Christian Persch  <chpe@gnome.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb): Restore the fix
	for bug #125046.

2007-11-13  Christian Persch  <chpe@gnome.org>

	* configure.in: Update version after branching.

2007-11-12  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-selector-widget.c: Remove redundant include.

2007-11-12  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb): Disabled the
	dialog for now due to breaking the string freeze.

2007-11-11  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb):
	  Use a dialog for the "Help not found" message. Bug #125046.
	  Patch from Matthias Clasen with correction from Christian Persch.

============================= 2.20.0 =====================

2007-08-19  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* samples/container/bonobo-sample-container.c: (main):
	* tests/Makefile.am:
	* tests/test-moniker.c: (main): move to GOption and fix a typoe
	in Makefile.am

============================= 2.19.6 =====================

2007-07-30  Christian Persch  <chpe@gnome.org>

	* autogen.sh:
	* configure.in: Build fixes.

2007-07-11  Christian Persch  <chpe@gnome.org>

	* configure.in: Temporarily remove the deprecation flags so we can
	build with gtk+ trunk. Bug #455597.

2007-06-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Bump verison.

============================= 2.19.4 =====================
2007-06-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: update
	
	* configure.in: Bump version to 2.19.4.

2007-03-23  Christian Persch  <chpe@gnome.org>

	* bonobo/Makefile.am:
	* bonobo/bonobo-canvas-item.c:
	* bonobo/bonobo-dock-item-grip.c:
	* bonobo/bonobo-dock-item.c:
	* bonobo/bonobo-file-selector-util.c:
	* bonobo/bonobo-plug.c:
	* bonobo/bonobo-selector-widget.c:
	* bonobo/bonobo-selector.c:
	* bonobo/bonobo-ui-config-widget.c:
	* bonobo/bonobo-ui-engine-config.c: