@@ -1,3 +1,8 @@
+2008-01-22  Tor Lillqvist  <tml@novell.com>
+
+	* libbonoboui-zip.in: Look for catalogs in share/locale first, as
+	that is where they will be with a properly built GNU gettext.
+
 2007-11-13  Christian Persch  <chpe@gnome.org>
 
 	* bonobo/bonobo-ui-util.c: (bonobo_help_display_cb): Restore the fix
